--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.11",
+    "@tanstack/react-query-devtools": "^5.91.1",
+    "mysql2": "^3.15.3",
     "next": "16.0.5",
     "react": "19.2.0",
     "react-dom": "19.2.0"
