--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tanstack/react-query": "^5.90.11",
     "@tanstack/react-query-devtools": "^5.91.1",
     "mysql2": "^3.15.3",
+    "nanoid": "^5.1.6",
     "next": "16.0.5",
     "react": "19.2.0",
     "react-dom": "19.2.0"
